--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,13 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Install dependencies
         run: npm install
       - name: Build the application
         run: npm run build
       - name: Build the Docker image
-        run: docker build -t wagnermelo13/medscheduler-frontend:$GITHUB_SHA -f Dockerfile .
+        run: docker build -t wagnermelo13/medscheduler-frontend:$GITHUB_SHA -f ./Dockerfile .
       - name: Login to Docker Hub
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Push the Docker image
         run: docker push wagnermelo13/medscheduler-frontend:$GITHUB_SHA
